fix line wrapping

--- a/src/test.less
+++ b/src/test.less
@@ -1,6 +1,5 @@
 @import 'variables';
 
 body {
-  font-family: "Open Sans";
   background-color: @db-background;
 }
